# claude-code-visualizer

./: .gitignore  README.md  claude-code-viz.html  index.html  process_data.py  pyproject.toml  run.sh
src/claude_code_visualizer/: __init__.py  __main__.py  cli.py  data.py  renderer.py
src/claude_code_visualizer/assets/: template.html
