[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "claude-code-visualizer"
version = "0.1.0"
description = "Generate a self-contained HTML visualization of your Claude Code usage"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.7"
authors = [{name = "aybidi"}]
keywords = ["claude", "claude-code", "visualization", "analytics"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.scripts]
claude-viz = "claude_code_visualizer.cli:main"

[project.urls]
Homepage = "https://github.com/aybidi/claude-code-visualizer"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
claude_code_visualizer = ["assets/*"]
